@@ -716,19 +716,6 @@ comment|// would it be more efficient to write segment-at-a-time to each new ind
 comment|// - need to worry about number of open descriptors
 comment|// - need to worry about if IW.addIndexes does a sync or not...
 comment|// - would be more efficient on the read side, but prob less efficient merging
-name|IndexReader
-index|[]
-name|subReaders
-init|=
-operator|new
-name|IndexReader
-index|[
-name|leaves
-operator|.
-name|size
-argument_list|()
-index|]
-decl_stmt|;
 for|for
 control|(
 name|int
@@ -752,6 +739,10 @@ literal|"SolrIndexSplitter: partition #"
 operator|+
 name|partitionNumber
 operator|+
+literal|" partitionCount="
+operator|+
+name|numPieces
+operator|+
 operator|(
 name|ranges
 operator|!=
@@ -770,50 +761,6 @@ literal|""
 operator|)
 argument_list|)
 expr_stmt|;
-for|for
-control|(
-name|int
-name|segmentNumber
-init|=
-literal|0
-init|;
-name|segmentNumber
-operator|<
-name|subReaders
-operator|.
-name|length
-condition|;
-name|segmentNumber
-operator|++
-control|)
-block|{
-name|subReaders
-index|[
-name|segmentNumber
-index|]
-operator|=
-operator|new
-name|LiveDocsReader
-argument_list|(
-name|leaves
-operator|.
-name|get
-argument_list|(
-name|segmentNumber
-argument_list|)
-argument_list|,
-name|segmentDocSets
-operator|.
-name|get
-argument_list|(
-name|segmentNumber
-argument_list|)
-index|[
-name|partitionNumber
-index|]
-argument_list|)
-expr_stmt|;
-block|}
 name|boolean
 name|success
 init|=
@@ -954,14 +901,98 @@ expr_stmt|;
 block|}
 try|try
 block|{
-comment|// This merges the subreaders and will thus remove deletions (i.e. no optimize needed)
+comment|// This removes deletions but optimize might still be needed because sub-shards will have the same number of segments as the parent shard.
+for|for
+control|(
+name|int
+name|segmentNumber
+init|=
+literal|0
+init|;
+name|segmentNumber
+operator|<
+name|leaves
+operator|.
+name|size
+argument_list|()
+condition|;
+name|segmentNumber
+operator|++
+control|)
+block|{
+name|log
+operator|.
+name|info
+argument_list|(
+literal|"SolrIndexSplitter: partition #"
+operator|+
+name|partitionNumber
+operator|+
+literal|" partitionCount="
+operator|+
+name|numPieces
+operator|+
+operator|(
+name|ranges
+operator|!=
+literal|null
+condition|?
+literal|" range="
+operator|+
+name|ranges
+operator|.
+name|get
+argument_list|(
+name|partitionNumber
+argument_list|)
+else|:
+literal|""
+operator|)
+operator|+
+literal|" segment #"
+operator|+
+name|segmentNumber
+operator|+
+literal|" segmentCount="
+operator|+
+name|leaves
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|IndexReader
+name|subReader
+init|=
+operator|new
+name|LiveDocsReader
+argument_list|(
+name|leaves
+operator|.
+name|get
+argument_list|(
+name|segmentNumber
+argument_list|)
+argument_list|,
+name|segmentDocSets
+operator|.
+name|get
+argument_list|(
+name|segmentNumber
+argument_list|)
+index|[
+name|partitionNumber
+index|]
+argument_list|)
+decl_stmt|;
 name|iw
 operator|.
 name|addIndexes
 argument_list|(
-name|subReaders
+name|subReader
 argument_list|)
 expr_stmt|;
+block|}
 name|success
 operator|=
 literal|true
